[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/Menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/mama-bear/Mama Bear Incease/Mama Bear Incease.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/gameplay_theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=10]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 3 )
Button/styles/disabled = null
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 7 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 8 )
Label/styles/normal = null
RichTextLabel/colors/default_color = Color( 1, 1, 1, 1 )
RichTextLabel/colors/font_color_selected = Color( 0.49, 0.49, 0.49, 1 )
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 0 )
RichTextLabel/colors/selection_color = Color( 0.1, 0.1, 1, 0.8 )
RichTextLabel/constants/line_separation = 1
RichTextLabel/constants/shadow_as_outline = 0
RichTextLabel/constants/shadow_offset_x = 1
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/table_hseparation = 3
RichTextLabel/constants/table_vseparation = 3
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = SubResource( 9 )
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.490196 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -515.844
margin_top = -695.219
margin_right = 460.156
margin_bottom = 704.781
rect_min_size = Vector2( 2000, 2000 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.290196, 0.262745, 0.262745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -250.0
margin_right = 200.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CenterContainer"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_right = 400.0
margin_bottom = 500.0
rect_min_size = Vector2( 400, 500 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 350.0
margin_bottom = 450.0
rect_min_size = Vector2( 300, 400 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 300.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )
text = "Master Volume"
align = 1

[node name="MasterSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 300.0
margin_bottom = 131.0
min_value = -40.0
max_value = 0.0
value = -10.0

[node name="Label4" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 300.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 2 )
text = "Music"
align = 1

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 300.0
margin_bottom = 212.0
min_value = -40.0
max_value = 0.0
value = -10.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 232.0
margin_right = 300.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 2 )
text = "Sound Effects"
align = 1

[node name="SoundSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
margin_top = 277.0
margin_right = 300.0
margin_bottom = 293.0
min_value = -40.0
max_value = 0.0
value = -10.0
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 313.0
margin_right = 300.0
margin_bottom = 337.0
custom_constants/separation = 50
alignment = 1

[node name="Label5" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_top = 2.0
margin_right = 186.0
margin_bottom = 22.0
theme = SubResource( 10 )
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 236.0
margin_right = 260.0
margin_bottom = 24.0

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 357.0
margin_right = 300.0
margin_bottom = 377.0
theme = ExtResource( 3 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Resume Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
pause_mode = 2
margin_left = 50.0
margin_top = 50.0
margin_right = 265.0
margin_bottom = 20.0
theme = ExtResource( 3 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Exit to main menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="CenterContainer/VBoxContainer/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
